--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -7,7 +7,8 @@
 	<div id="app">{{{body}}}</div>
 	<script type="text/javascript">
 		var _willow = {
-			url: {{{ url }}}
+			url: {{{ url }}},
+			params: {{{ params }}}
 		};
 	</script>
 	<script type="text/javascript" src="/scripts/bundle.js"></script>
